[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enlace_docker"
version = "0.0.3"
description = "Docker / docker-compose backend strategies for enlace (mode=docker, compose, image, docker_attached)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["enlace", "docker", "docker-compose", "asgi", "multi-app"]
authors = [{ name = "Thor Whalen" }]
dependencies = [
    "enlace>=0.1.20",
    "httpx>=0.24.0",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/i2mint/enlace_docker"
"Parent project" = "https://github.com/i2mint/enlace"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

# This is the whole point of the package — register four BackendStrategy
# subclasses against the `enlace.backend_strategies` group so that installing
# enlace_docker makes mode={"docker","compose","image","docker_attached"}
# work in app.toml with no user code change.
[project.entry-points."enlace.backend_strategies"]
docker = "enlace_docker.strategies:DockerStrategy"
compose = "enlace_docker.strategies:ComposeStrategy"
image = "enlace_docker.strategies:ImageStrategy"
docker_attached = "enlace_docker.strategies:DockerAttachedStrategy"

# Docker-aware checks for `enlace diagnose`, registered against enlace's
# diagnoser extension point (enlace >= 0.1.20).
[project.entry-points."enlace.diagnosers"]
docker = "enlace_docker.diagnose:docker_diagnoser"

[tool.pytest.ini_options]
testpaths = ["enlace_docker/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D100"]
ignore = ["D203"]

[tool.hatch.build.targets.wheel]
packages = ["enlace_docker"]

# ============================================================================
# CI Configuration (consumed by i2mint/wads reusable workflow)
# ============================================================================
# The .github/workflows/ci.yml stub calls i2mint/wads/.github/workflows/uv-ci.yml,
# which reads everything below. Override defaults here, not in the workflow.

[tool.wads.ci]
project_name = "enlace_docker"

[tool.wads.ci.testing]
enabled = true
python_versions = ["3.10", "3.12"]
# Docker-dependent tests gate on the DOCKER_AVAILABLE env var (see conftest.py)
# and skip when it isn't set, so CI runners without Docker still pass.
coverage_enabled = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true

[tool.wads.ci.docs]
# Small package — README is the doc. Skip GitHub Pages publishing.
enabled = false
